--- a/WebContent/css/page.css
+++ b/WebContent/css/page.css
@@ -41,3 +41,10 @@ body {
 .jobdetail-wrapper {
 	padding-top: 20px;
 }
+
+.result-msg {
+	margin-top: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	border-radius: 5px;
+}
